--- a/BlogSolution/RestfulBlogApp/views/partials/header.ejs
+++ b/BlogSolution/RestfulBlogApp/views/partials/header.ejs
@@ -1,9 +1,23 @@
 <html>
   <head>
     <title>Blog App</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link 
+      href="styles/app.css" 
+      rel="stylesheet"
+      type="text/css" 
+    />
   </head>
 
   <body>
-    <p>from the header file</p>
-  </body>
-</html>
+    <div class="ui fixed inverted menu">
+      <div class="ui container">
+        <div class="header item"><i class="code icon"></i>Blog Site</div>
+        <a href="/" class="item">Home</a>
+        <a href="/blogs/new" class="item">New post</a>
+      </div>
+    </div>
